Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Attended_Event__c.field-meta.xml
<CustomField>
    <fullName>Attended_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check denotes Member ATTENDED this event</inlineHelpText>
    <label>Attended Event</label>
    <type>Checkbox</type>
</CustomField>