Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Chemistry__c.field-meta.xml
<CustomField>
    <fullName>Chemistry__c</fullName>
    <description>required for Informatics targeting</description>
    <label>Chemistry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>