Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Follow_Up_Process__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Process__c</fullName>
    <description>Telemarketing Category for VoiceCentric</description>
    <label>Follow Up Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA - Agree to Appointment</fullName>
            </value>
            <value>
                <fullName>Email - Send Email w/Fufillment</fullName>
            </value>
            <value>
                <fullName>General Inquiry - Other Product</fullName>
            </value>
            <value>
                <fullName>Lit Fulfillment - Print</fullName>
            </value>
            <value>
                <fullName>Called-Left Message</fullName>
            </value>
            <value>
                <fullName>Called- Bad Number</fullName>
            </value>
            <value>
                <fullName>Called-Spoke to</fullName>
            </value>
            <value>
                <fullName>Emailed-Received Response</fullName>
            </value>
            <value>
                <fullName>Emailed-Bounced</fullName>
            </value>
            <value>
                <fullName>Emailed-No Response</fullName>
            </value>
            <value>
                <fullName>Converted to Lead</fullName>
            </value>
            <value>
                <fullName>No Response/Deadend</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Emailed Information</fullName>
            </value>
            <value>
                <fullName>Left VM &amp; Emailed</fullName>
            </value>
            <value>
                <fullName>Not the right person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>