Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Genomics__c.field-meta.xml
<CustomField>
    <fullName>Genomics__c</fullName>
    <description>required for Informatics profiling</description>
    <label>Genomics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>