Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Member_Comments__c.field-meta.xml
<CustomField>
    <fullName>Member_Comments__c</fullName>
    <description>Campaign Specific Member Comments</description>
    <inlineHelpText>Please enter any details specific to this campaign member.</inlineHelpText>
    <label>Member Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>