Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <description>Identify List Source</description>
    <inlineHelpText>Identify List that supplied name</inlineHelpText>
    <label>Original Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>