Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/PKI_Glb_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>PKI_Glb_Lead_Status__c</fullName>
    <description>This captures the Lead Status on Leads and reflects in Campaign Members.</description>
    <formula>TEXT(Lead.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>