Perkin-UAT/force-app/main/default/objects/CampaignMember/fields/Send_Survey_Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_Qualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for workflow rules to send survey to a campaign member.  Qualtrics GloriaM</description>
    <inlineHelpText>Check when this person should receive the designated survey</inlineHelpText>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>